--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "morgan": "^1.10.0",
     "mysql2": "^3.9.9",
     "nodemon": "^3.1.4",
+    "path": "^0.12.7",
     "seedrandom": "^3.0.5",
     "sequelize": "^6.37.3"
   },
