--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.3.1",
+    "react-images-uploading": "^3.1.7",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
