--- a/api/package.json
+++ b/api/package.json
@@ -7,13 +7,14 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "mysql2": "^3.10.1",
+    "mysql2": "^3.10.2",
     "nodemon": "^3.1.4",
     "path": "^0.12.7",
     "seedrandom": "^3.0.5",
