--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 /client/.env
 
 EC2_KEYPair.pem
-
+/.vscode/*
 # # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # # dependencies
@@ -30,3 +30,4 @@ EC2_KEYPair.pem
 # npm-debug.log*
 # yarn-debug.log*
 # yarn-error.log*
+.vscode/launch.json
