--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^2.28.0",
     "react": "^18.3.1",
     "react-date-range": "^1.4.0",
+    "react-datepicker": "^7.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
